--- a/package.json
+++ b/package.json
@@ -19,5 +19,7 @@
         "postcss": "^8.4.6",
         "postcss-import": "^14.0.2",
         "tailwindcss": "^3.0.18"
+    },
+    "dependencies": {
     }
 }
