--- a/composer.json
+++ b/composer.json
@@ -1,20 +1,31 @@
 {
     "name": "aimeos/aimeos",
     "description": "Aimeos ecommerce and shop system",
-    "keywords": ["aimeos", "ecommerce", "shop", "laravel", "distribution"],
+    "keywords": [
+        "aimeos",
+        "ecommerce",
+        "shop",
+        "laravel",
+        "distribution"
+    ],
     "license": "MIT",
     "type": "project",
-    "repositories": [{
-        "type": "composer",
-        "url": "https://packages.aimeos.org/aimeoscom"
-    }, {
-        "type": "path",
-        "url": "packages/*"
-    }],
+    "repositories": [
+        {
+            "type": "composer",
+            "url": "https://packages.aimeos.org/aimeoscom"
+        },
+        {
+            "type": "path",
+            "url": "./packages/*",
+            "options": {
+                "symlink": true
+            }
+        }
+    ],
     "require": {
         "php": "^8.0.10",
         "composer-runtime-api": "^2.1",
-        "aimeos/aimeos-laravel": "^2022.10",
         "guzzlehttp/guzzle": "^7.2",
         "laravel/breeze": "^1.9",
         "laravel/framework": "^9.2",
