--- a/composer.json
+++ b/composer.json
@@ -58,7 +58,7 @@
         "post-autoload-dump": [
             "Illuminate\\Foundation\\ComposerScripts::postAutoloadDump",
             "@php artisan package:discover --ansi",
-            'composer req aimeos-themes/cutetotoro'
+            "composer req aimeos-themes/cutetotoro"
         ],
         "post-root-package-install": [
             "@php -r \"file_exists('.env') || copy('.env.example', '.env');\""
