--- a/composer.json
+++ b/composer.json
@@ -28,6 +28,7 @@
         "composer-runtime-api": "^2.1",
         "aimeos-themes/cutetotoro": "dev-master",
         "aimeos/aimeos-laravel": "^2022.10",
+        "doctrine/dbal": "^3.6",
         "guzzlehttp/guzzle": "^7.2",
         "laravel/breeze": "^1.9",
         "laravel/framework": "^9.2",
