--- a/composer.json
+++ b/composer.json
@@ -91,7 +91,7 @@
         "preferred-install": "dist",
         "sort-packages": true,
         "allow-plugins": {
-            "php-http/discovery": true
+            "php-http/discovery": false
         }
     },
     "minimum-stability": "dev",
